// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorHead test on web renders 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  padding-top: 30px;
}

.c2 {
  width: 100px;
}

.c3 {
  font-family: TimesModern-Bold;
  font-size: 30px;
  color: #1D1D1B;
}

.c4 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-top: 60px;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 116px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 0;
    padding-right: 0;
    max-width: 680px;
  }
}

@media (min-width:1320px) {
  .c4 {
    max-width: 760px;
  }
}

<div
  className="c0"
>
  <div
    data-testid="author-head"
  >
    <header
      className="c1"
      role="banner"
    >
      <div
        className="c2"
      />
      <h1
        aria-label="author-name"
        aria-level="1"
        className="c3"
        data-testid="author-name"
        dir="auto"
        role="heading"
      >
        
      </h1>
      <h2
        aria-level="2"
        dir="auto"
        role="heading"
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        
      </h2>
      <div
        className="c4"
      >
        <div
          data-testid="author-bio"
          dir="auto"
        />
      </div>
    </header>
  </div>
</div>
`;

exports[`AuthorHead test on web renders the loading state 1`] = `
<div>
  <div />
  <div>
    <div>
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`AuthorHead test on web renders with data 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  padding-top: 30px;
}

.c2 {
  width: 100px;
}

.c3 {
  font-family: TimesModern-Bold;
  font-size: 30px;
  color: #1D1D1B;
}

.c4 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-top: 60px;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 116px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 0;
    padding-right: 0;
    max-width: 680px;
  }
}

@media (min-width:1320px) {
  .c4 {
    max-width: 760px;
  }
}

<div
  className="c0"
>
  <div
    data-testid="author-head"
  >
    <header
      className="c1"
      role="banner"
    >
      <div
        className="c2"
      >
        <div
          style={
            Object {
              "borderBottomLeftRadius": "50%",
              "borderBottomRightRadius": "50%",
              "borderTopLeftRadius": "50%",
              "borderTopRightRadius": "50%",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table",
                "height": 0,
                "overflow": "hidden",
                "paddingBottom": "100%",
              }
            }
          >
            <img
              alt=""
              src="https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200"
              style={
                Object {
                  "display": "block",
                  "position": "absolute",
                  "width": "100%",
                  "zIndex": 1,
                }
              }
            />
            <div>
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <h1
        aria-label="author-name"
        aria-level="1"
        className="c3"
        data-testid="author-name"
        dir="auto"
        role="heading"
      >
        Carol Midgley
      </h1>
      <h2
        aria-level="2"
        dir="auto"
        role="heading"
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        columnist
      </h2>
      <div>
        <svg
          height={15}
          width={15}
        >
          <path
            fill="#006699"
          />
        </svg>
        <a
          dir="auto"
          href="https://twitter.com/carolmidgley"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
        >
          @
          carolmidgley
        </a>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="author-bio"
          dir="auto"
        >
          Carol Midgley joined 
          <em>
            The Times
          </em>
           in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
          <em>
            Times2
          </em>
           each week and a weekly comment piece on Fridays.
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`AuthorHead test on web renders without profile picture 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  padding-top: 30px;
}

.c2 {
  width: 100px;
}

.c3 {
  font-family: TimesModern-Bold;
  font-size: 30px;
  color: #1D1D1B;
}

.c4 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-top: 60px;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 116px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 0;
    padding-right: 0;
    max-width: 680px;
  }
}

@media (min-width:1320px) {
  .c4 {
    max-width: 760px;
  }
}

<div
  className="c0"
>
  <div
    data-testid="author-head"
  >
    <header
      className="c1"
      role="banner"
    >
      <div
        className="c2"
      />
      <h1
        aria-label="author-name"
        aria-level="1"
        className="c3"
        data-testid="author-name"
        dir="auto"
        role="heading"
      >
        Carol Midgley
      </h1>
      <h2
        aria-level="2"
        dir="auto"
        role="heading"
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        columnist
      </h2>
      <div>
        <svg
          height={15}
          width={15}
        >
          <path
            fill="#006699"
          />
        </svg>
        <a
          dir="auto"
          href="https://twitter.com/carolmidgley"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
        >
          @
          carolmidgley
        </a>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="author-bio"
          dir="auto"
        >
          Carol Midgley joined 
          <em>
            The Times
          </em>
           in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
          <em>
            Times2
          </em>
           each week and a weekly comment piece on Fridays.
        </div>
      </div>
    </header>
  </div>
</div>
`;
